--- a/data/login_data.yml
+++ b/data/login_data.yml
@@ -3,27 +3,27 @@ test_login:
     phone:"18503080305"
     password:"123456"
     expect:"登录成功"
-#  test_login_002:
-#    phone:"18503080305"
-#    password:"123456113"
-#    expect:"登录错误"
-#  test_login_003:
-#    phone:"18503080305  "
-#    password:"123456"
-#    expect:"登录成功"
-#  test_login_004:
-#    phone:" 18503080305"
-#    password:"123456"
-#    expect:"账号不存在"
-#  test_login_005:
-#    phone:"185030803501"
-#    password:"123456"
-#    expect:"账号不存在"
-#  test_login_006:
-#    phone:"1850308030"
-#    password:"123456"
-#    expect:"账号不存在"
-#  test_login_009:
-#    phone:"123211111"
-#    password:"123456"
-#    expect:"账号不存在"
+  test_login_002:
+    phone:"18503080305"
+    password:"123456113"
+    expect:"登录错误"
+  test_login_003:
+    phone:"18503080305  "
+    password:"123456"
+    expect:"登录成功"
+  test_login_004:
+    phone:" 18503080305"
+    password:"123456"
+    expect:"账号不存在"
+  test_login_005:
+    phone:"185030803501"
+    password:"123456"
+    expect:"账号不存在"
+  test_login_006:
+    phone:"1850308030"
+    password:"123456"
+    expect:"账号不存在"
+  test_login_009:
+    phone:"123211111"
+    password:"123456"
+    expect:"账号不存在"
