--- a/data/login_data.yml
+++ b/data/login_data.yml
@@ -1,29 +1,36 @@
-test_login:
-  test_login_001:
+#test_login:
+#  test_login_001:
+#    phone: "18503080305"
+#    password: "123456"
+#    expect: "登录成功"
+#  test_login_002:
+#    phone: "18503080305"
+#    password: "123456113"
+#    expect: "密码错误"
+#  test_login_003:
+#    phone: "18503080305  "
+#    password: "123456"
+#    expect: "登录成功"
+#  test_login_004:
+#    phone: " 18503080305"
+#    password: "123456"
+#    expect: "账号不存在"
+#  test_login_005:
+#    phone: "185030803501"
+#    password: "123456"
+#    expect: "账号不存在"
+#  test_login_006:
+#    phone: "1850308030"
+#    password: "123456"
+#    expect: "账号不存在"
+#  test_login_009:
+#    phone: "123211111"
+#    password: "123456"
+#    expect: "账号不存在"
+test_login_miss_part:
+  test_login_miss_part:_001:
     phone: "18503080305"
+    password: ""
+  test_login_miss_part_002:
+    phone: ""
     password: "123456"
-    expect: "登录成功"
-  test_login_002:
-    phone: "18503080305"
-    password: "123456113"
-    expect: "密码错误"
-  test_login_003:
-    phone: "18503080305  "
-    password: "123456"
-    expect: "登录成功"
-  test_login_004:
-    phone: " 18503080305"
-    password: "123456"
-    expect: "账号不存在"
-  test_login_005:
-    phone: "185030803501"
-    password: "123456"
-    expect: "账号不存在"
-  test_login_006:
-    phone: "1850308030"
-    password: "123456"
-    expect: "账号不存在"
-  test_login_009:
-    phone: "123211111"
-    password: "123456"
-    expect: "账号不存在"
