--- a/pytest.ini
+++ b/pytest.ini
@@ -3,7 +3,7 @@ addopts = -s  --alluredir report  --reruns 2
 
 testpaths = ./scripts
 
-python_files = test_*.py
+python_files = test_add*.py
 
 python_classes = Test*
 
